service.yaml
apiVersion: v1
kind: Service
metadata:
  name: treepi-svc
  labels:
    app: treepi
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: treepi
    tier: frontend
