ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: treepi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
 rules:
 - host: local.ecosia.org
   http:
     paths:
     - path: /tree
       backend:
         serviceName: treepi-svc
         servicePort: 8080
